--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TEAMO</title>
+    <title>❤️Mili❤️</title>
     <link rel="stylesheet" href="styles.css" />
 
     <link
@@ -19,8 +19,8 @@
   </head>
 
   <body class="not-loaded">
-    <h1>Estas flores son para la chica mas bonita ❤️ </h1>
-    <p class="my-name">Feliz 14 mi nuv</p>
+    <h1>Para Mili, la chica mas bonita</h1>
+    <p class="my-name">Feliz 14 psicologa daa</p>
     <div class="rain"></div>
     <div class="flower" id="animation-flower">
       <div class="f-wrapper">
